<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundanimalguidelogreg"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="source-sans-pro"
        android:text="@string/email"
        android:textColor="#F0EAEA"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:fontFamily="source-sans-pro"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:shadowColor="#F0EAEA"
        android:textColor="#F0EAEA"
        android:textColorHighlight="#F0EAEA"
        android:textColorHint="#F0EAEA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="source-sans-pro"
        android:text="@string/password"
        android:textColor="#F0EAEA"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:fontFamily="source-sans-pro"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:shadowColor="#F0EAEA"
        android:textColor="#F0EAEA"
        android:textColorHighlight="#F0EAEA"
        android:textColorHint="#F0EAEA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="168dp"
        android:layout_height="68dp"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/login"
        android:textColor="#4E4C4C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/register"
        android:textColor="#4E4C4C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <Button
        android:id="@+id/btnstopMusic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/stop_music"
        android:textColor="#4E4C4C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"/>

</androidx.constraintlayout.widget.ConstraintLayout>
