<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundanimalguidelogreg"
    tools:context=".fragments.HomeScreenFragment">

    <Button
        android:id="@+id/btnStrart"
        android:layout_width="217dp"
        android:layout_height="81dp"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/start_button"
        android:textColor="#4E4C4C"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/txtViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="source-sans-pro"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/welcome_text"
        android:textColor="#F1EBEB"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/btnChangeLang"
        android:layout_width="251dp"
        android:layout_height="64dp"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/change_language_button"
        android:textColor="#4E4C4C"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/btnStopMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F0EAEA"
        android:fontFamily="source-sans-pro"
        android:text="@string/stop_music"
        android:textColor="#4E4C4C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

</androidx.constraintlayout.widget.ConstraintLayout>
